-issue#1097: When copying template user, enable that user, also template users should be disabled by default
-issue: Move Graph removal function to Graph API
-feature: Make tree editing responive

1.1.30
-issue#1155: Non-secure mail setting not functional due to changes in phpmailer
-issue#1157: Resolve issue with branch permission api
-issue: basename function undefined during upgrade to 1.0.x
-issue: Storage API and translations required for Change password function
-issue: ALTER IGNORE still throws an error when attempting to drop the primary key
-issue: Data Source profile form API generates error when system is half upgraded

1.1.29
-issue#871: Allow Nth Percentile and Bandwidth Summation to respect 'Base Value' in template
-issue#965: Duplicate error message and incorrect error code when using LDAP authentication
-issue#1084: Graph Tree Branch not properly populating when editing report item
-issue#1104: Datetime formatting in developer debug mode incorrect
-issue#1106: Template Filters has empty row
-issue#1109: URL used in redirection when referrer already has parameters in it
-issue#1110: Add CPU Total to 'SNMP - Get Processor Information'
-issue#1111: PHP NOTICE when using LDAP authenication
-issue#1116: Filters not allowing "None" or "All" when editing report item
-issue#1119: Reduced amount of data fetched for CPU usage to just the data used
-issue#1121: Bandwidth summation not using correct locale
-issue#1122: Fix issue with local login / potential password problems
-issue#1128: Resolve php warning when raising messages
-issue#1130: Fix logging level issue where logs of same level as setting where not logged
-issue#1131: Make upgrade_database.php use same version compare as /install/ system
-issue#1133: Fix issues with variable name and debug log
-issue#1141: When viewing graphs from list view, pagination causes list view filter to be cleared
-issue#1143: ss_host_cpu.php - Division by zero / Invalid Return Value